// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CdrRating > with an href > renders correctly 1`] = `
<a
  class="cdr-rating cdr-rating--linked"
  href="rei.com"
>
  <div
    class="cdr-rating__ratings"
  >
    
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    
    <cdrstar25
      aria-hidden="true"
    />
    
    <cdrstar00
      aria-hidden="true"
    />
    
  </div>
  <span
    aria-hidden="true"
    class="cdr-rating__count"
  >
    <span
      class="cdr-rating__number"
    >
      3.2
    </span>
    <span>
      100
    </span>
    <span>
       Reviews
    </span>
  </span>
  <span
    class="cdr-rating__caption-sr"
  >
    View the 100 reviews with an average rating of 3.2 out of 5 stars
  </span>
</a>
`;

exports[`CdrRating > with an href > with a count of 0 > renders correctly 1`] = `
<a
  class="cdr-rating cdr-rating--linked"
  href="rei.com"
>
  <div
    class="cdr-rating__ratings"
  >
    
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    
    <cdrstar25
      aria-hidden="true"
    />
    
    <cdrstar00
      aria-hidden="true"
    />
    
  </div>
  <span
    aria-hidden="true"
    class="cdr-rating__count"
  >
    <span
      class="cdr-rating__number"
    >
      3.2
    </span>
    <span>
      0
    </span>
    <span>
       Reviews
    </span>
  </span>
  <span
    class="cdr-rating__caption-sr"
  >
    No reviews yet; be the first!
  </span>
</a>
`;

exports[`CdrRating > with an href > with a whole number rating > renders correctly 1`] = `
<a
  class="cdr-rating cdr-rating--linked"
  href="rei.com"
>
  <div
    class="cdr-rating__ratings"
  >
    
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    
    <!--v-if-->
    
    <cdrstar00
      aria-hidden="true"
    />
    <cdrstar00
      aria-hidden="true"
    />
    
  </div>
  <span
    aria-hidden="true"
    class="cdr-rating__count"
  >
    <span
      class="cdr-rating__number"
    >
      3.0
    </span>
    <span>
      1
    </span>
    <span>
       Reviews
    </span>
  </span>
  <span
    class="cdr-rating__caption-sr"
  >
    View the 1 reviews with an average rating of 3.0 out of 5 stars
  </span>
</a>
`;

exports[`CdrRating > with an href > with decimal rating and count 1 > renders correctly 1`] = `
<a
  class="cdr-rating cdr-rating--linked"
  href="rei.com"
>
  <div
    class="cdr-rating__ratings"
  >
    
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    
    <cdrstar50
      aria-hidden="true"
    />
    
    <cdrstar00
      aria-hidden="true"
    />
    
  </div>
  <span
    aria-hidden="true"
    class="cdr-rating__count"
  >
    <span
      class="cdr-rating__number"
    >
      3.4
    </span>
    <span>
      1
    </span>
    <span>
       Reviews
    </span>
  </span>
  <span
    class="cdr-rating__caption-sr"
  >
    View the 1 reviews with an average rating of 3.4 out of 5 stars
  </span>
</a>
`;

exports[`CdrRating > with an href > with string input > renders correctly 1`] = `
<a
  class="cdr-rating cdr-rating--linked"
  href="rei.com"
>
  <div
    class="cdr-rating__ratings"
  >
    
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    
    <cdrstar50
      aria-hidden="true"
    />
    
    <cdrstar00
      aria-hidden="true"
    />
    
  </div>
  <span
    aria-hidden="true"
    class="cdr-rating__count"
  >
    <span
      class="cdr-rating__number"
    >
      3.4
    </span>
    <span>
      2
    </span>
    <span>
       Reviews
    </span>
  </span>
  <span
    class="cdr-rating__caption-sr"
  >
    View the 2 reviews with an average rating of 3.4 out of 5 stars
  </span>
</a>
`;

exports[`CdrRating > without an href > renders correctly 1`] = `
<div
  class="cdr-rating"
>
  <div
    class="cdr-rating__ratings"
  >
    
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    
    <!--v-if-->
    
    <cdrstar00
      aria-hidden="true"
    />
    <cdrstar00
      aria-hidden="true"
    />
    
  </div>
  <!--v-if-->
  <span
    class="cdr-rating__caption-sr"
  >
    Rated 3.0 out of 5 stars
  </span>
</div>
`;

exports[`CdrRating > without an href > with a count of 0 > renders correctly 1`] = `
<div
  class="cdr-rating"
>
  <div
    class="cdr-rating__ratings"
  >
    
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    
    <!--v-if-->
    
    <cdrstar00
      aria-hidden="true"
    />
    <cdrstar00
      aria-hidden="true"
    />
    
  </div>
  <span
    aria-hidden="true"
    class="cdr-rating__count"
  >
    <!--v-if-->
    <span>
      0
    </span>
    <span>
       Reviews
    </span>
  </span>
  <span
    class="cdr-rating__caption-sr"
  >
    0 reviews
  </span>
</div>
`;

exports[`CdrRating > without an href > with a count of 100 > renders correctly 1`] = `
<div
  class="cdr-rating"
>
  <div
    class="cdr-rating__ratings"
  >
    
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="cdr-rating__star cdr-rating__star--medium"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="cdr-rating__star--filled"
        d="M12.4389 17.3426L11.9688 17.0431L11.4986 17.3426L7.12363 20.1295L8.29875
      14.7917L8.40726 14.2988L8.03494 13.9581L4.02151 10.2852L9.26273 9.80999L9.79622
      9.76163L9.99576 9.2645L11.9688 4.34901L13.9417 9.2645L14.1413 9.76163L14.6748
      9.80999L19.916 10.2852L15.9026 13.9581L15.5302 14.2988L15.6388 14.7917L16.8139
      20.1295L12.4389 17.3426Z"
        stroke-width="1.75"
      />
    </svg>
    
    <!--v-if-->
    
    <cdrstar00
      aria-hidden="true"
    />
    <cdrstar00
      aria-hidden="true"
    />
    
  </div>
  <span
    aria-hidden="true"
    class="cdr-rating__count"
  >
    <!--v-if-->
    <span>
      100
    </span>
    <span>
       Reviews
    </span>
  </span>
  <span
    class="cdr-rating__caption-sr"
  >
    100 reviews with an average rating of 3.0 out of 5 stars
  </span>
</div>
`;
